tests/ui/suggestions/imm-ref-trait-object-literal-bound-regions.stderr
error[E0277]: the trait bound `for<'b> &'b S: Trait` is not satisfied
  --> $DIR/imm-ref-trait-object-literal-bound-regions.rs:17:14
   |
LL |     foo::<S>(s);
   |     -------- ^ the trait `for<'b> Trait` is not implemented for `&'b S`
   |     |
   |     required by a bound introduced by this call
   |
   = help: the trait `Trait` is implemented for `&'a mut S`
   = note: `for<'b> Trait` is implemented for `&'b mut S`, but not for `&'b S`
note: required by a bound in `foo`
  --> $DIR/imm-ref-trait-object-literal-bound-regions.rs:11:20
   |
LL | fn foo<X>(_: X)
   |    --- required by a bound in this function
LL | where
LL |     for<'b> &'b X: Trait,
   |                    ^^^^^ required by this bound in `foo`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
